--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                      <div class="layout-element layout-element--layout layout-element transition transition--undefined" style="--text:center;--align:flex-start;--justify:flex-start;--m-element-margin:0 0 16px 0;--z-index:4;--grid-row:4/5;--grid-column:8/13;--m-grid-row:4/5;--m-grid-column:1/6;">
                         <!--[--><!----><!----><!----><!----><!---->
                         <div class="text-box layout-element__component layout-element__component--GridTextBox" id="zAgp3Y" style="--36f106d3:break-spaces;--0706d955:break-spaces;">
-                           <h3 style="color: rgb(0, 0, 0); --lineHeightDesktop:  1.3; --fontSizeDesktop:  32px"><span style="font-weight: 700"><strong>$APPLE</strong></span></h3>
+                           <h3 style="color: rgb(0, 0, 0); --lineHeightDesktop:  1.3; --fontSizeDesktop:  32px"><span style="font-weight: 700"><strong>$APPLE</strong></span></h3><br>
+                           <p><a style="font-size: 40PX; text-decoration: none;" href="https://flooz.xyz/trade/0xec81c3ef221ef50eac72f473782fa9d99002ff02?network=eth&refId=HtwiZx" target="_blank">BUY</a></p>
                         </div>
                         <!----><!----><!----><!----><!----><!----><!----><!--[--><!--]--><!--]-->
                      </div>
@@ -66,7 +67,7 @@
                         <!--[--><!----><!----><!----><!----><!---->
                         <div class="text-box layout-element__component layout-element__component--GridTextBox" id="zH8JIK" style="--36f106d3:break-spaces;--0706d955:break-spaces;">
                            <h3 style="color: rgb(0, 0, 0); --lineHeightMobile:  1.3; --lineHeightDesktop:  1.3; --fontSizeMobile:  14px; --fontSizeDesktop:  14px; margin-bottom: 8px"><span style="color: rgb(0, 0, 0); text-transform: none; letter-spacing: normal; font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; font-weight: 400">Apple Smackle, introducing $APPLE. The new meta has arrived. <a target="_blank" href="https://uniswap.org/">Buy</a></span><br><span style="color: rgb(0, 0, 0); text-transform: none; letter-spacing: normal; font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; font-weight: 400"> Mission: $APPLE has flooded the mainstream market and we’re up next! Soon we takeover twitter, so get your kids a babysitter… because we're going to the moon!</span><br><span style="color: rgb(0, 0, 0); text-transform: none; letter-spacing: normal; font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; font-weight: 400"></span><br></h3>
-                           <p style="color: rgb(0, 0, 0); --lineHeightMobile:  1.3; --lineHeightDesktop:  1.3; --fontSizeMobile:  14px; --fontSizeDesktop:  14px" class="body">ca: 0xec81c3ef221ef50eac72f473782fa9d99002ff02</p>
+                           <p style="color: rgb(0, 0, 0); --lineHeightMobile:  1.3; --lineHeightDesktop:  1.3; --fontSizeMobile:  14px; --fontSizeDesktop:  14px" class="body">ca: 0xec81c3ef221ef50eac72f473782fa9d99002ff02</p> <br>
                         </div>
                         <!----><!----><!----><!----><!----><!----><!----><!--[--><!--]--><!--]-->
                      </div>
